# artem

./: .gitignore  LICENSE  README.md  bot_server.py  cron_tasks.py  farcaster_bot.py  pyproject.toml  render.yaml  requirements.txt  tasks.py  telegram_bot.py  test_buy.py  testing.py  testing_worker.py  twitter_no_api.py  utils.py  webhook_tasks.py
helpers/: artto_actions_helpers.py  artto_decision_helpers.py  basescan_helpers.py  coinbase_helpers.py  farcaster_helpers.py  image_processing_helpers.py  llm_helpers.py  nft_data_helpers.py  openrouter_helpers.py  opensea_helpers.py  scoring_criteria_schema.py  spam_tweet_schema.py  top_collections.json  twitter_following.py  twitter_helpers.py  url_array_report_schema.py  utils.py  wallet_analysis.py
helpers/prompts/: casual_thought_topics.py  core_identity.py  llm_prompts.py  scoring_criteria.py  spam_prompts.py  taste_profile.py  taste_weights.yaml  url_extract_prompts.py  voice_and_tone.py
other/: token_uri_details.json  tracked_wallets.json
templates/: analyses-detail.html  chat_with_artto.html  gallery.html  main.html  opinion.html  roast.html  taste_profile.html  verify-balance.html
