[tool.poetry]
name = "artto-ai"
version = "0.1.0"
description = "Autonomous AI agent that collects art"
authors = ["João Fiadeiro <j.fiadeiro@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.13"
arequests = "^0.1.1"
asgiref = "^3.8.1"
cdp-sdk = "^0.11.0"
celery = "^5.4.0"
flask = "^3.1.0"
markdown = "^3.7"
flower = "^2.0.1"
openai = "^1.56.2"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
